crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@arithmetic__add_two_numbers.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for arithmetic/add_two_numbers.cm
input_file: test_data/arithmetic/add_two_numbers.cm
---
Fixture: arithmetic/add_two_numbers.cm
============================================================
Source code:
fn add_two_numbers() -> felt {
    let a = 10;
    let b = 32;
    return a + b;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn add_two_numbers {
    entry: 0

    0:
      %0 = 10
      %1 = 32
      %2 = %0 Add %1
      return %2

  }

}
