crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@arithmetic__equals.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for arithmetic/equals.cm
input_file: test_data/arithmetic/equals.cm
---
Fixture: arithmetic/equals.cm
============================================================
Source code:
fn simple_eq() -> felt {
    let x = 10;
    let y = 20;
    let z = x == y;
    return z;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn simple_eq {
    entry: 0

    0:
      %0 = 10
      %1 = 20
      %2 = %0 Eq %1
      return %2

  }

}
