crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@arithmetic__left_imm.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for arithmetic/left_imm.cm
input_file: test_data/arithmetic/left_imm.cm
---
Fixture: arithmetic/left_imm.cm
============================================================
Source code:
fn with_left_imm() -> felt {
    let x = 1+1;
    let _y = 2*x;
    let z = 20/x;
    return z;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn with_left_imm {
    entry: 0

    0:
      %0 = 2
      %3 = 20 Div %0
      return %3

  }

}
