crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@arithmetic__not_equals.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for arithmetic/not_equals.cm
input_file: test_data/arithmetic/not_equals.cm
---
Fixture: arithmetic/not_equals.cm
============================================================
Source code:
fn simple_neq() -> bool {
    let x = true;
    let y = false;
    let z = x != y;
    return z;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn simple_neq {
    entry: 0

    0:
      %0 = true
      %1 = false
      %2 = %0 Neq %1
      return %2

  }

}
