crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@arithmetic__or.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for arithmetic/or.cm
input_file: test_data/arithmetic/or.cm
---
Fixture: arithmetic/or.cm
============================================================
Source code:
fn simple_or() -> bool {
    let x = true;
    let y = false;
    let z = x || y;
    return z;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn simple_or {
    entry: 0

    0:
      %0 = true
      %1 = false
      %2 = %0 Or %1
      return %2

  }

}
