crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@arithmetic__subtract_numbers.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for arithmetic/subtract_numbers.cm
input_file: test_data/arithmetic/subtract_numbers.cm
---
Fixture: arithmetic/subtract_numbers.cm
============================================================
Source code:
fn subtract_numbers() -> felt {
    let a = 100;
    let b = 25;
    return a - b;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn subtract_numbers {
    entry: 0

    0:
      %0 = 100
      %1 = 25
      %2 = %0 Sub %1
      return %2

  }

}
