crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@arithmetic__unary.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for arithmetic/unary.cm
input_file: test_data/arithmetic/unary.cm
---
Fixture: arithmetic/unary.cm
============================================================
Source code:
// Tests various unary operations.
fn test_neg(a: felt) -> felt {
    let c = -a;
    return c;
}

fn test_not(a: bool) -> bool {
    let c = !a;
    return c;
}

fn test_neg_literal() -> felt {
    let c = -42;
    return c;
}

fn test_not_literal_nonzero() -> bool {
    let c = !true;
    return c;
}

fn test_double_neg(a: felt) -> felt {
    let c = --a;
    return c;
}

fn test_not_not(a: bool) -> bool {
    let c = !!a;
    return c;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_neg {
    parameters: [0]
    entry: 0

    0:
      %1 = Neg %0
      return %1

  }

  // Function 1
  fn test_not {
    parameters: [0]
    entry: 0

    0:
      %1 = Not %0
      return %1

  }

  // Function 2
  fn test_neg_literal {
    entry: 0

    0:
      %0 = Neg 42
      return %0

  }

  // Function 3
  fn test_not_literal_nonzero {
    entry: 0

    0:
      %0 = Not true
      return %0

  }

  // Function 4
  fn test_double_neg {
    parameters: [0]
    entry: 0

    0:
      %1 = Neg %0
      %2 = Neg %1
      return %2

  }

  // Function 5
  fn test_not_not {
    parameters: [0]
    entry: 0

    0:
      %1 = Not %0
      %2 = Not %1
      return %2

  }

}
